--- a/kube/base/config.yaml
+++ b/kube/base/config.yaml
@@ -4,4 +4,5 @@ metadata:
   name: cm
   namespace: api-space
 data:
-  HELLO_ENV: "hello"
+  API_HELLO_PORT: "3000"
+  HELLO_MESSAGE: "Hello, pippo!"
