--- a/kube/api-hello/deployment.yaml
+++ b/kube/api-hello/deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: api-hello
-        image: api-hello:0.0.1
+        image: squee/api-hello:0.0.1
         imagePullPolicy: IfNotPresent
         ports:
         - name: http
